chapter12/sample01/sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sts-deployment 
  labels:
    app: sts 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: sts
  template:
    metadata:
      labels:
        app: sts
    spec:
      containers:
      - name: sts
        image: prabath/com.manning.mss.ch12.sts:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
        volumeMounts:
          - name: application-properties
            mountPath: "/opt/application.properties"
            subPath: "application.properties"
          - name: jwt-keystore
            mountPath: "/opt/jwt.jks"
            subPath: "jwt.jks"
      volumes:
        - name: application-properties
          configMap:
            name: sts-application-properties-config-map
        - name: jwt-keystore
          configMap:
            name: sts-jwt-keystore-config-map
---
apiVersion: v1
kind: Service
metadata:
  name: sts-service
spec:
 type: LoadBalancer
 selector:
  app: sts
 ports:
 - protocol: TCP
   port: 80
   targetPort: 8443
