chapter12/sample01/istio.ingress.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecomm-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE # enables HTTPS on this port
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecomm-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - ecomm-gateway
  tls:
    - match:
      - port: 443
        sni_hosts:
        - sts.ecomm.com
      route:
      - destination:
          host: sts-service
          port:
            number: 80
    - match:
      - port: 443
        sni_hosts:
        - orders.ecomm.com
      route:
      - destination:
          host: orders-service
          port:
            number: 80
